--- a/express-api/package.json
+++ b/express-api/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "socket.io": "^2.3.0",
     "web3": "^1.2.6"
   },
   "devDependencies": {
