--- a/truffle/package.json
+++ b/truffle/package.json
@@ -7,11 +7,15 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-typings": "typechain"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^8.0.26",
+    "typechain": "0.0.2",
+    "web3-typescript-typings": "0.3.0",
     "@openzeppelin/contracts": "^2.5.0",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17"
