--- a/db/package.json
+++ b/db/package.json
@@ -20,14 +20,19 @@
   },
   "dependencies": {
     "@nestjs/common": "7.0.5",
+    "@nestjs/config": "^0.4.0",
     "@nestjs/core": "7.0.5",
     "@nestjs/microservices": "7.0.5",
     "@nestjs/platform-express": "7.0.5",
+    "@nestjs/typeorm": "^7.0.0",
     "class-transformer": "0.2.3",
     "class-validator": "0.11.1",
+    "mysql": "^2.18.1",
+    "pg": "^7.18.2",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "^6.5.4",
+    "typeorm": "^0.2.24",
     "web3": "^1.2.6"
   },
   "devDependencies": {
